--- a/index.html
+++ b/index.html
@@ -9,43 +9,53 @@
 </head>
 
 <body>
-  <img class="logo" src="./img/bikcraft.svg" alt="Bikcraft">
-  <div class="menu">
-    <a href="/">sobre</a>
-    <a href="/">produtos</a>
-    <a href="/">lojas</a>
-    <a href="/">contato</a>
-  </div>
-  <div class="conteudo">
-    <div class="introducao">
-      <span class="detalhe"></span>
-      <h1>Bicicletas Feitas a Mão</h1>
-      <p>A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca.</p>
-      <a class="botao" href="/">Ver mais</a>
-    </div>
+  <header class="header">
+    <img class="logo" src="./img/bikcraft.svg" alt="Bikcraft">
 
-    <img src="./img/bicicleta.jpg" alt="Bicicleta bikcraft preta">
+    <nav aria-label="primária">
+      <ul class="menu">
+        <li><a href="/">sobre</a></li>
+        <li><a href="/">produtos</a></li>
+        <li><a href="/">lojas</a></li>
+        <li><a href="/">contato</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <h2 class="subtitulo">Vantagens Bikcraft</h2>
-    <div class="vantagens">
-      <div class="vantagens-item">
-        <img src="./img/eletrica.svg" alt="">
-        <h3>Motor elétrico</h3>
-        <p>Permite você viajar distâncias inimagináveis com a sua bike.</p>
+  <main>
+    <article class="conteudo">
+      <div class="introducao" aria-labelledby="label-introducao">
+        <span class="detalhe"></span>
+        <h1 id="label-introducao">Bicicletas Feitas a Mão</h1>
+        <p>A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca.</p>
+        <a class="botao" href="/">Ver mais</a>
       </div>
-      <div class="vantagens-item">
-        <img src="./img/velocidade.svg" alt="">
-        <h3>40km/h</h3>
-        <p>A mais rápida bicicleta elétrca disponível hoje no mercado.</p>
-      </div>
-      <div class="vantagens-item">
-        <img src="./img/rastreador.svg" alt="">
-        <h3>Rastreador</h3>
-        <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
-      </div>
-    </div>
-  </div>
+
+      <img src="./img/bicicleta.jpg" alt="Bicicleta bikcraft preta">
+    </article>
+
+    <article class="conteudo" aria-labelledby="label-vantagens">
+      <h2 class="subtitulo" id="label-vantagens">Vantagens Bikcraft</h2>
+      <ul class="vantagens">
+        <li class="vantagens-item">
+          <img src="./img/eletrica.svg" alt="">
+          <h3>Motor elétrico</h3>
+          <p>Permite você viajar distâncias inimagináveis com a sua bike.</p>
+        </li>
+        <li class="vantagens-item">
+          <img src="./img/velocidade.svg" alt="">
+          <h3>40km/h</h3>
+          <p>A mais rápida bicicleta elétrca disponível hoje no mercado.</p>
+        </li>
+        <li class="vantagens-item">
+          <img src="./img/rastreador.svg" alt="">
+          <h3>Rastreador</h3>
+          <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
+        </li>
+      </ul>
+    </article>
+  </main>
 </body>
-<footer>Bikcraft. Alguns direitos reservados.</footer>
+<footer class="rodape">Bikcraft. Alguns direitos reservados.</footer>
 
 </html>
